<resources>
    <string name="app_name">Hesabu</string>
    <string name="ADS_VISIBILITY" translatable="false">NO</string>
    <string name="app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
       <string name="banner_ads" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
       <string name="admob_interstitial_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
       <string name="video_reward_ads" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
       <string name="rewarded_ad_id" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
       <string name="navigation_drawer_open">Open navigation drawer</string>
       <string name="navigation_drawer_close">Close navigation drawer</string>
       <string name="nav_header_title">Android Studio</string>
       <string name="nav_header_subtitle">akinyeleolubodun@yahoo.com</string>
       <string name="nav_header_desc">Navigation header</string>
       <string name="action_settings">Settings</string>
       <string name="menu_home">Home</string>
       <string name="menu_gallery">Gallery</string>
       <string name="menu_slideshow">Slideshow</string>
       <string name="menu_tools">Tools</string>
       <string name="menu_share">Share</string>
       <string name="menu_send">Send</string>
       <string name="rem">rem</string>
       <string name="no_internet">Internet connection not available</string>
       <string name="str_video_error">Video is not loading. Please check your internet connection.</string>
       <string name="coins_error">Coins not available</string>
       <string name="decimal">Decimal</string>
       <string name="fraction">Fraction</string>
       <string name="integer">Integer</string>
       <string name="addition">Addition</string>
       <string name="mixed">Mixed</string>
       <string name="percentage">Percentage</string>
       <string name="square">Square</string>
       <string name="square_root">Square Root</string>
       <string name="cube_root">Cube Root</string>
       <string name="cube">Cube</string>
       <string name="subtraction">Subtraction</string>
       <string name="division">Division</string>
       <string name="multiplication">Multiplication</string>
       <string name="practice_set">Practice Set</string>
       <string name="ex_">Example:</string>
       <string name="set">Set</string>
       <string name="question">Question:</string>
       <string name="str_question">Question</string>
       <string name="please_wait">Please wait...</string>
       <string name="wrong_answer">Wrong Answer</string>
       <string name="unanswer">UnAnswer</string>
       <string name="create_pdf">Create PDF</string>
       <string name="send_to">Send mail…</string>
       <string name="find_missing">Find Missing</string>
       <string name="coins">Coins :</string>
       <string name="view_answer">Review Answer</string>
       <string name="view_answer_coin">Use 10 coins</string>
       <string name="show_video">Watch Video ads</string>
       <string name="questions">Questions :</string>
       <string name="answer">Answer</string>
       <string name="your_answer">Your answer</string>
       <string name="str_of">\u0020of\u0020</string>
       <string name="history">History</string>
       <string name="quiz">quiz</string>
       <string name="total_set">Total set</string>
       <string name="total_question">Total question</string>
       <string name="ex">Example:</string>
       <string name="score">Score:</string>
       <string name="retry">Retry</string>
       <string name="next">Next</string>
       <string name="home">Home</string>
       <string name="best_score">Best Score:</string>
       <string name="no">No.</string>
       <string name="feedback">Feedback</string>
       <string name="rate_us">Rate us</string>
       <string name="send_email">Send Email</string>
       <string name="share_link">Share Link!</string>
       <string name="save_pdf">Save Pdf..</string>
       <string name="language">Language</string>
       <string name="worksheet_generate">Worksheet Generate</string>
       <string name="school_name">School Name</string>
       <string name="school_name_hint">School Name</string>
       <string name="number_of_question">Number of Question</string>
       <string name="number_of_question_hint">Number of Questions</string>
       <string name="operation_type">Operation Type</string>
       <string name="submit">Submit</string>
       <string name="without_answer">Without Answer</string>
       <string name="with_answer">With Answer</string>
       <string name="cancel">Cancel</string>
       <string name="ok">OK</string>
       <string name="operation">Operation</string>
       <string name="without_carry">Without Carry</string>
       <string name="with_carry">With Carry</string>
       <string name="with_borrow">With Borrow</string>
       <string name="without_borrow">Without borrow</string>
       <string name="without_remainder">Without remainder</string>
       <string name="with_remainder">With remainder</string>
       <string name="str_multiplication_set">Multiplication Set</string>
       <string name="str_addition_set">Addition Set</string>
       <string name="str_subtraction_set">Subtraction Set</string>
       <string name="str_division_set">Division Set</string>
       <string name="empty_error">Please enter value..</string>
       <string name="question_paper">Question Paper</string>
       <string name="studentName">Student Name :</string>
       <string name="daily_test">Daily Test</string>
       <string name="take_test">Take test</string>
       <string name="test_done">Test Done !!</string>
       <string name="done">Done</string>
       <string name="level_complete">Complete</string>
       <string name="level">Level</string>
       <string name="sunday">Sunday</string>
       <string name="monday">Monday</string>
       <string name="repeat">Repeat</string>
       <string name="tuesday">Tuesday</string>
       <string name="wednesday">Wednesday</string>
       <string name="thursday">Thursday</string>
       <string name="friday">Friday</string>
       <string name="saturday">Saturday</string>
       <string name="days">Sun,Mon,Tue,Wed,Thu,Fri,Sat</string>
       <string name="reminder">Reminder</string>
       <string name="mathry_reminder">Mathry Reminder</string>
       <string name="teacher_name">Teacher Name</string>
       <string name="teacher_name_hint">Teacher Name</string>
       <string name="date">Date :</string>
       <string name="type_of_question">Type of Question</string>
       <string name="marks">Marks :</string>
       <string name="page">Page</string>
       <string name="str_answer">Answer:</string>
       <string name="watermark_text">Watermark Text</string>
       <string name="watermark_text_hint">WaterMark Text*</string>
       <string name="pdf">Pdf</string>
       <string name="pdf_generate">Pdf Generated</string>
       <string name="select_operation_type">Select operation type</string>
       <string name="please_select_type">Please select type…</string>
       <string name="fill_details">Please fill details....</string>
       <string name="select_operation">Select Operation</string>
       <string name="operation_selected">Operation Selected</string>
       <string name="operation_selected_hint">Operation Selected*</string>
       <string name="select_number_types">Select Number Types</string>
       <string name="number_type_selected">Number Type Selected</string>
       <string name="select_question_type">Select Question Type</string>
       <string name="question_type_selected">Question Type Selected</string>
       <string name="select_question_category">Select Question Category</string>
       <string name="question_category_selected">Question category selected</string>
       <string name="no_data">No Data</string>
       <string name="show_worksheet">Show Worksheet</string>
       <string name="test_already_done">Test already done !</string>
       <string name="clear_previous_level">Clear previous level..</string>
       <string name="sound">Sound</string>
       <string name="on">On</string>
       <string name="off">Off</string>
       <string name="way_of_learning">Way of Learning</string>
       <string name="multi_operation">Multi Operations</string>
       <string name="pdf_error">No application found which can open the file</string>
       <string name="enter_valid_number">Enter valid number…</string>
       <string name="no_app_found">No  application found which can open the file</string>
       <string name="link">Link</string>
       <string name="select_logo_from_gallery">Select Logo from gallery</string>
       <string name="link_hint">Link</string>
       <string name="please_select_logo">Please select logo..</string>
       <string name="auto_fill">Auto fill</string>
       <string name="choose_image">Choose Image</string>
       <string name="delete_file">Delete file</string>
       <string name="select_all">Select all</string>
       <string name="empty_feedback">Please Enter your Feedback</string>
       <string name="feedback_hint">Tell us where we can improve?</string>
       <string name="rate_experience">Rate Your Experience</string>
       <string name="rate_msg">If you enjoy using app \n would you mind ratting us,then…?</string>
       <string name="no_thanks">No, Thanks</string>
       <string name="rating_error">Please select rate</string>
       <string name="rate_your_experience">Rate Your Experience</string>
       <string name="privacy_policy">Privacy policy</string>
       <string name="communicate">Communicate</string>
       <string name="addition_1">Addition 1 digit with 1 digit with no carrying</string>
       <string name="addition_2">Addition 1 digit with 2 digit with no carrying</string>
       <string name="addition_3">Addition 1 digit with 1 digit with carrying</string>
       <string name="addition_4">Addition 1 digit with 2 digit with carrying</string>
       <string name="addition_5">Addition 2 digit with 1 digit with no carrying</string>
       <string name="addition_6">Addition 2 digit with 2 digit with no carrying</string>
       <string name="addition_7">Addition 2 digit with 3 digit with no carrying</string>
       <string name="addition_8">Addition 2 digit with 1 digit with carrying</string>
       <string name="addition_9">Addition 2 digit with 2 digit with carrying</string>
       <string name="addition_10">Addition 2 digit with 3 digit with carrying</string>
       <string name="addition_11">Addition 3 digit with 2 digit with no carrying</string>
       <string name="addition_12">Addition 3 digit with 3 digit with no carrying</string>
       <string name="addition_13">Addition 3 digit with 4 digit with no carrying</string>
       <string name="addition_14">Addition 3 digit with 2 digit with carrying</string>
       <string name="addition_15">Addition 3 digit with 3 digit with carrying</string>
       <string name="addition_16">Addition 3 digit with 4 digit with carrying</string>
       <string name="addition_17">Addition 4 digit with 3 digit with no carrying</string>
       <string name="addition_18">Addition 4 digit with 4 digit with no carrying</string>
       <string name="addition_19">Addition 4 digit with 3 digit with carrying</string>
       <string name="addition_20">Addition 4 digit with 4 digit with carrying</string>
       <string name="addition_21">Addition 3 digit with 2 digit with no carrying</string>
       <string name="addition_22">Addition 3 digit with 3 digit with no carrying</string>
       <string name="addition_23">Addition 3 digit with 4 digit with no carrying</string>
       <string name="addition_24">Decimal Addition 1 digit 1 decimal with 1 digit 1 decimal with no carrying</string>
       <string name="addition_25">Decimal Addition 1 digit 2 decimal with 1 digit 2 decimal with no carrying</string>
</resources>