<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center"
        android:background="@drawable/cell_cyan"
        android:gravity="center"
        android:theme="@style/ToolbarStyle">


        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/myriadpro_semibold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white" />

    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/myriadpro_regular"
                android:text="@string/school_name_hint"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/cyanColorPrimaryDark"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/edt_school_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_5"
                android:background="@drawable/work_sheet_view"
                android:fontFamily="@font/myriadpro_regular"
                android:hint="@string/school_name"
                android:padding="@dimen/dp_10"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColorHint="#78797B" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:fontFamily="@font/myriadpro_regular"
                android:text="@string/teacher_name_hint"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/cyanColorPrimaryDark"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_teacher_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_5"
                android:background="@drawable/work_sheet_view"
                android:fontFamily="@font/myriadpro_regular"
                android:hint="@string/teacher_name"
                android:padding="@dimen/dp_10"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColorHint="#78797B" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:fontFamily="@font/myriadpro_regular"
                android:text="@string/link_hint"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/cyanColorPrimaryDark"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_5"
                android:background="@drawable/work_sheet_view"
                android:fontFamily="@font/myriadpro_regular"
                android:hint="@string/link"
                android:padding="@dimen/dp_10"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColorHint="#78797B" />

            <CheckBox
                android:id="@+id/check_auto_fill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/myriadpro_regular"
                android:text="@string/auto_fill" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:fontFamily="@font/myriadpro_regular"
                android:text="@string/number_of_question_hint"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/cyanColorPrimaryDark"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_number_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_5"
                android:background="@drawable/work_sheet_view"
                android:fontFamily="@font/myriadpro_regular"
                android:hint="@string/number_of_question"
                android:inputType="number"
                android:padding="@dimen/dp_10"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColorHint="#78797B" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:fontFamily="@font/myriadpro_regular"
                android:text="@string/watermark_text_hint"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/cyanColorPrimaryDark"
                android:textStyle="bold"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/edt_watermark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_5"
                android:background="@drawable/work_sheet_view"
                android:fontFamily="@font/myriadpro_regular"
                android:hint="@string/watermark_text"
                android:inputType="text"
                android:padding="@dimen/dp_10"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColorHint="#78797B"
                android:visibility="gone"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:fontFamily="@font/myriadpro_regular"
                android:text="@string/select_logo_from_gallery"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/cyanColorPrimaryDark"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginEnd="@dimen/dp_5"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:fontFamily="@font/myriadpro_regular"
                    android:padding="@dimen/dp_10"
                    android:text="@string/choose_image"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/btn_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginEnd="@dimen/dp_5"
                    android:background="@drawable/cell_cyan"
                    android:fontFamily="@font/myriadpro_regular"
                    android:padding="@dimen/dp_10"
                    android:text="@string/choose_image"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/white" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:fontFamily="@font/myriadpro_regular"
                android:text="@string/select_operation"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/cyanColorPrimaryDark"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/text_operation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_5"
                android:background="@drawable/work_sheet_view"
                android:fontFamily="@font/myriadpro_regular"
                android:gravity="bottom"
                android:padding="@dimen/dp_10"
                android:text="@string/operation_selected"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />


            <LinearLayout
                android:id="@+id/layout_select_operation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:fontFamily="@font/myriadpro_regular"
                    android:text="@string/select_number_types"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/cyanColorPrimaryDark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/edt_number_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:background="@drawable/work_sheet_view"
                    android:fontFamily="@font/myriadpro_regular"
                    android:gravity="bottom"
                    android:padding="@dimen/dp_10"
                    android:text="@string/number_type_selected"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_select_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:fontFamily="@font/myriadpro_regular"
                    android:text="@string/select_question_type"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/cyanColorPrimaryDark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/edt_question_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:background="@drawable/work_sheet_view"
                    android:fontFamily="@font/myriadpro_regular"
                    android:gravity="bottom"
                    android:padding="@dimen/dp_10"
                    android:text="@string/question_type_selected"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_select_set"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:fontFamily="@font/myriadpro_regular"
                    android:text="@string/select_question_category"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/cyanColorPrimaryDark"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/btn_question_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:background="@drawable/work_sheet_view"
                    android:fontFamily="@font/myriadpro_regular"
                    android:gravity="bottom"
                    android:padding="@dimen/dp_10"
                    android:text="@string/question_category_selected"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:orientation="horizontal">


                <CheckBox
                    android:id="@+id/check_without_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:fontFamily="@font/myriadpro_regular"
                    android:text="@string/without_answer" />


                <CheckBox
                    android:id="@+id/check_with_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    android:fontFamily="@font/myriadpro_regular"
                    android:text="@string/with_answer" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp_10"
                android:background="@drawable/cell_cyan"
                android:fontFamily="@font/myriadpro_bold"
                android:gravity="center"
                android:padding="@dimen/dp_5"
                android:text="@string/submit"
                android:textColor="@color/white" />

        </LinearLayout>


    </ScrollView>


</LinearLayout>